	(dt_module_shuffle_to_start): New function.
	(dtrace_update): Call it.

	* libdtrace/dt_open.c (dt_vopen): Shuffle the C and D modules to
	the start of the list before doing type lookups that use them.

	* dt_lex.c (S2{RGX_PSPEC}): Filter out BEGIN, END, and ERROR.
	Avoid depending on yytext while unput()ting.
	(id_or_type): Reformulate to avoid looking up unknown types.

	* test/unittest/offsetof/err.D_UNKNOWN.badmemb.r: Adjust.
	* test/unittest/typedef/err.D_SYNTAX.BadExistingTypedef.r: Likewise.

2012-07-21  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_impl.h (dt_module): New dm_ctdata_data member,
	holding dynamically-allocated decompressed CTF data.
	* libdtrace/dt_module.c: Include <zlib.h>.
	(GZCHUNKSIZE): New macro, arbitrarily set at 512Kb.
	(dt_ctf_uncompress): New function.
	(dt_module_load): Call it when CTF sections are present.  Do not
	try to pass the uninitialized symbol and string tables to
	ctf_bufopen().  Log CTF errors in the debugging stream.
	(dt_module_getctf): Kernel modules with CTF with a parent of
	"PARENT" should use dtrace_ctf instead.
	(dt_module_unload): Free dm_ctdata_data.
	(dt_kern_module_init): Consider the dtrace_ctf module to be
	built-in.

	* libdtrace/dt_open.c (_dtrace_globals): Fix the CTF types
	for curthread, getmajor(), getminor(), mutex_owned(),
	mutex_owner(), mutex_type_adaptive(), mutex_type_spin(),
	rw_iswriter(), rw_read_held(), and rw_write_held().

	* INCOMPATIBILITIES: Document the permanent unavailability of the
	msgdsize() and msgsize() subroutines.

	* test/demo/builtin/{curthread,uid,gid}.d: No longer expected
	to fail.
        * test/unittest/funcs/tst.inet_ntoa.d: Likewise.
	* test/demo/script/syscall.r: We know the expected results of
	this test now.
	* test/unittest/enum/err.D_UNKNOWN.RepeatIdentifiers.r: The
	error from this test has improved now we have CTF support.
	* test/unittest/offsetof/err.D_UNKNOWN.OffsetofNULL.r: Likewise.
	* test/unittest/types/err.D_UNKNOWN.dupenum.r: Likewise.